Responding to Sean's feedback for open sourcing

--- a/examples/civisml_deployment.ipynb
+++ b/examples/civisml_deployment.ipynb
@@ -1,8 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Deployment with CivisML\n",
+    "\n",
+    "If you are familiar with scikit-learn and/or CivisML, deploying machine learning models in Python can now be done in Civis Platform with just a couple of API calls. This notebook will walk you through the following steps:\n",
+    "\n",
+    "1. Training a model on some toy data in CivisML,\n",
+    "2. Deploying that model as a web service on Civis Platform,\n",
+    "3. Getting the URL and an access token for your deployed model, and\n",
+    "4. Making requests of your now-deployed model. \n",
+    "\n",
+    "By executing the code in the cells below, you will be able to get predictions from a deployed model in about 5 minutes. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -45,92 +61,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>age</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>party</th>\n",
-       "      <th>msg</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20</td>\n",
-       "      <td>M</td>\n",
-       "      <td>other</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>25</td>\n",
-       "      <td>M</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>30</td>\n",
-       "      <td>F</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>40</td>\n",
-       "      <td>M</td>\n",
-       "      <td>R</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>50</td>\n",
-       "      <td>F</td>\n",
-       "      <td>D</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   age gender  party  msg\n",
-       "0   20      M  other    1\n",
-       "1   25      M      D    0\n",
-       "2   30      F      D    0\n",
-       "3   40      M      R    1\n",
-       "4   50      F      D    0"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
    ]
@@ -146,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -158,22 +93,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11263303"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mp.train_result_.train_job_id"
    ]
@@ -200,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -211,10 +135,10 @@
     "resp1 = client.services.post(\n",
     "    name='my_deployed_model',\n",
     "    docker_image_name=\"civisanalytics/model-deployment\",\n",
-    "    cpu=800,\n",
+    "    cpu=1000,\n",
     "    memory=8000, \n",
     "    environment_variables={'MODEL_JOB_ID': mp.train_result_.train_job_id, \n",
-    "                           'DEBUG': 1}   # The \"DEBUG\" environment variable turns on verbose logging\n",
+    "                           'DEBUG': 1}   # The optional \"DEBUG\" environment variable turns on verbose logging\n",
     ")"
    ]
   },
@@ -229,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -247,21 +171,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Platform page for your deployment: \n",
-      "https://platform.civisanalytics.com/#/services/797\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Platform page for your deployment: \")\n",
     "print(\"https://platform.civisanalytics.com/#/services/{}\".format(resp1['id']))"
@@ -278,26 +193,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Let's make some calls to our model!\n",
+    "### Let's get some predictions from our model!\n",
     "\n",
     "First, we'll need to get the model's URL and an access token. Once we have those, we can use python's `requests` library to make some simple RESTful calls. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://services--797--7ea03ac7669ac0a50bf15955--civis.shiny.services.civis.io\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = client.services.get(resp1['id'])['current_url']\n",
     "print(url)"
@@ -305,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -323,27 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"msg_0\": [\n",
-      "    0.936\n",
-      "  ], \n",
-      "  \"msg_1\": [\n",
-      "    0.064\n",
-      "  ]\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "\n",
@@ -368,27 +259,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{\n",
-      "  \"msg_0\": [\n",
-      "    0.936\n",
-      "  ], \n",
-      "  \"msg_1\": [\n",
-      "    0.064\n",
-      "  ]\n",
-      "}\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pred_url = url + '/predict?age=30&gender=F&party=D&civis_service_token=' + token_resp['token']\n",
     "\n",
@@ -408,19 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://platform.civisanalytics.com/#/services/797\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"https://platform.civisanalytics.com/#/services/{}\".format(resp1['id']))"
    ]
