Updating versions for CivisML 2.2

--- a/examples/civisml_deployment.ipynb
+++ b/examples/civisml_deployment.ipynb
@@ -24,7 +24,7 @@
    },
    "outputs": [],
    "source": [
-    "# NOTE: you should be using version 1.8.X of the Civis API client\n",
+    "# NOTE: you should be using version 1.8.X or 1.9.X of the Civis API client\n",
     "import civis"
    ]
   },
@@ -135,6 +135,7 @@
     "resp1 = client.services.post(\n",
     "    name='my_deployed_model',\n",
     "    docker_image_name=\"civisanalytics/model-deployment\",\n",
+    "    docker_image_tag=\"1.0.0\",  # Use 1.1.0 if your model was trained using v1.9.X of the Civis API client\n",
     "    cpu=1000,\n",
     "    memory=8000, \n",
     "    environment_variables={'MODEL_JOB_ID': mp.train_result_.train_job_id, \n",
